--- a/css/style.css
+++ b/css/style.css
@@ -863,6 +863,138 @@ margin-top: 5%;
   letter-spacing: 2px;
 }
 
+.booknow {
+    width: 100%;
+    margin-bottom: 45px;
+    padding: 35px 30px 10px 30px;
+    border-radius: 5px;
+    width: 90%;
+    margin: auto;
+}
+
+.bookform {
+    width: 80%;
+    margin: auto;
+    margin-bottom: 45px;
+    padding: 35px 30px 10px 30px;
+    border-radius: 5px;
+    background: #202C45;
+}
+  
+.bookform h4 {
+    color: #ffffff;
+    font-weight: bolder;
+    text-align: center;
+    margin: 15px;
+}
+  
+.form-control {
+    padding: 5px !important;
+}
+
+
+
+/*******************************/
+/********* Contact CSS *********/
+/*******************************/
+.contact {
+    position: relative;
+    width: 100%;
+    padding: 45px 0;
+}
+
+.contact .contact-info {
+    width: 100%;
+    margin-bottom: 45px;
+    padding: 35px 30px 10px 30px;
+    border-radius: 5px;
+    background: #202C45;
+    
+}
+
+.contact .contact-info h2 {
+    color: #ffffff;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+
+.contact .contact-info-item {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 30px;
+}
+
+.contact .contact-info-icon {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ffffff;
+    border-radius: 50px;
+}
+
+.contact .contact-info-icon i {
+    margin: 0;
+    color: #202C45;
+    font-size: 16px;
+}
+
+.contact .contact-info-text {
+    padding-left: 20px;
+}
+
+.contact .contact-info-text h3 {
+    margin: 0 0 5px 0;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+.contact .contact-info-text p {
+    margin: 0;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.contact .contact-form {
+    position: relative;
+    width: 100%;
+    margin-bottom: 45px;
+}
+
+.contact .contact-form input {
+    padding: 15px;
+    border-radius: 5px;
+    border: 1px solid #202C45;
+}
+
+.contact .contact-form textarea {
+    height: 125px;
+    padding: 8px 15px;
+    border-radius: 5px;
+    border: 1px solid #202C45;
+}
+
+.contact .help-block ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.contact iframe {
+    width: 100%;
+    height: 400px;
+    border-radius: 5px;
+}
+
+  
+  
+
 
 /*******************************/
 /********** Facts CSS **********/
@@ -1197,104 +1329,6 @@ margin-top: 5%;
 
 
 
-/*******************************/
-/********* Contact CSS *********/
-/*******************************/
-.contact {
-    position: relative;
-    width: 100%;
-    padding: 45px 0;
-}
-
-.contact .contact-info {
-    width: 100%;
-    margin-bottom: 45px;
-    padding: 35px 30px 10px 30px;
-    border-radius: 5px;
-    background: #202C45;
-    
-}
-
-.contact .contact-info h2 {
-    color: #ffffff;
-    font-size: 25px;
-    font-weight: 700;
-    margin-bottom: 30px;
-}
-
-.contact .contact-info-item {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-bottom: 30px;
-}
-
-.contact .contact-info-icon {
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #ffffff;
-    border-radius: 50px;
-}
-
-.contact .contact-info-icon i {
-    margin: 0;
-    color: #202C45;
-    font-size: 16px;
-}
-
-.contact .contact-info-text {
-    padding-left: 20px;
-}
-
-.contact .contact-info-text h3 {
-    margin: 0 0 5px 0;
-    color: #ffffff;
-    font-size: 18px;
-    font-weight: 700;
-    letter-spacing: 1px;
-}
-
-.contact .contact-info-text p {
-    margin: 0;
-    color: #ffffff;
-    font-size: 16px;
-    font-weight: 500;
-}
-
-.contact .contact-form {
-    position: relative;
-    width: 100%;
-    margin-bottom: 45px;
-}
-
-.contact .contact-form input {
-    padding: 15px;
-    border-radius: 5px;
-    border: 1px solid #202C45;
-}
-
-.contact .contact-form textarea {
-    height: 125px;
-    padding: 8px 15px;
-    border-radius: 5px;
-    border: 1px solid #202C45;
-}
-
-.contact .help-block ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-.contact iframe {
-    width: 100%;
-    height: 400px;
-    border-radius: 5px;
-}
-
 
 
 
@@ -1354,6 +1388,7 @@ margin-top: 5%;
     position: relative;
     margin-top: 20px;
     display: flex;
+   
 }
 
 .footer .footer-social a {
@@ -1361,12 +1396,13 @@ margin-top: 5%;
     height: 40px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     color: #202C45;
     background: #ffffff;
     border-radius: 40px;
     margin-right: 5px;
     transition: .5s;
+    margin-right: 20px;
 }
 
 .footer .footer-social a:last-child {
