--- a/css/style.css
+++ b/css/style.css
@@ -806,7 +806,7 @@ margin-top: 5%;
   }
   .panel-title a {
     position: relative;
-    background: #ed5f5e;
+    background: #3071E7;
     color: #fff;
     display: block;
     padding: 22px 40px;
@@ -878,7 +878,7 @@ margin-top: 5%;
     margin-bottom: 45px;
     padding: 35px 30px 10px 30px;
     border-radius: 5px;
-    background: #202C45;
+    background:  #3071E7;
 }
   
 .bookform h4 {
@@ -888,6 +888,10 @@ margin-top: 5%;
     margin: 15px;
 }
   
+.bookform button {
+    margin-top: 5px;
+}
+
 .form-control {
     padding: 5px !important;
 }
@@ -908,7 +912,7 @@ margin-top: 5%;
     margin-bottom: 45px;
     padding: 35px 30px 10px 30px;
     border-radius: 5px;
-    background: #202C45;
+    background:  #3071E7;
     
 }
 
@@ -938,7 +942,7 @@ margin-top: 5%;
 
 .contact .contact-info-icon i {
     margin: 0;
-    color: #202C45;
+    color:  #3071E7;
     font-size: 16px;
 }
 
@@ -970,14 +974,14 @@ margin-top: 5%;
 .contact .contact-form input {
     padding: 15px;
     border-radius: 5px;
-    border: 1px solid #202C45;
+    border: 1px solid  #3071E7;
 }
 
 .contact .contact-form textarea {
     height: 125px;
     padding: 8px 15px;
     border-radius: 5px;
-    border: 1px solid #202C45;
+    border: 1px solid  #3071E7;
 }
 
 .contact .help-block ul {
@@ -992,344 +996,6 @@ margin-top: 5%;
     border-radius: 5px;
 }
 
-  
-  
-
-
-/*******************************/
-/********** Facts CSS **********/
-/*******************************/
-.facts {
-    position: relative;
-    width: 100%;
-    min-height: 400px;
-    margin: 45px 0;
-    display: flex;
-    align-items: center;
-    background: #202C45;
-}
-
-.facts .facts-item {
-    display: flex;
-    flex-direction: row;
-    margin: 25px 0;
-}
-
-.facts .facts-item i {
-    margin-top: 15px;
-    font-size: 45px;
-    color: #E81C2E;
-}
-
-.facts .facts-text {
-    padding-left: 20px;
-}
-
-.facts .facts-text h3 {
-    position: relative;
-    display: inline-block;
-    color: #ffffff;
-    font-size: 60px;
-    font-weight: 700;
-}
-
-.facts .facts-text h3::after {
-    position: absolute;
-    content: "\f067";
-    top: 0px;
-    right: -25px;
-    color: #ffffff;
-    font-size: 25px;
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-}
-
-.facts .facts-text p {
-    color: #ffffff;
-    font-size: 18px;
-    font-weight: 500;
-    margin: 0;
-}
-
-
-
-
-/*******************************/
-/******** Location CSS *********/
-/*******************************/
-.location {
-    position: relative;
-    width: 100%;
-    padding: 45px 0;
-}
-
-.location .location-item {
-    display: flex;
-    margin-bottom: 30px;
-}
-
-.location .location-item i {
-    padding-top: 3px;
-    font-size: 30px;
-    color: #E81C2E;
-}
-
-.location .location-text {
-    padding-left: 15px;
-}
-
-.location .location-text h3 {
-    font-size: 18px;
-    font-weight: 700;
-}
-
-.location .location-text p {
-    margin-bottom: 5px;
-}
-
-.location .location-text p strong {
-    margin-right: 5px;
-    font-weight: 600;
-}
-
-.location .location-form {
-    padding: 45px 30px;
-    background: #E81C2E;
-    border-radius: 5px;
-}
-
-.location .location-form h3 {
-    color: #ffffff;
-    font-size: 25px;
-    font-weight: 700;
-    margin-bottom: 25px;
-}
-
-.location .location-form .control-group {
-    margin-bottom: 15px;
-}
-
-.location .location-form .form-control {
-    height: 45px;
-    color: #ffffff;
-    padding: 0 15px;
-    border-radius: 5px;
-    border: 1px solid #ffffff;
-    background: transparent;
-}
-
-.location .location-form textarea.form-control {
-    height: 120px;
-    padding: 15px;
-}
-
-.location .location-form .form-control::placeholder {
-    color: #ffffff;
-    opacity: 1;
-}
-
-.location .location-form .form-control:-ms-input-placeholder,
-.location .location-form .form-control::-ms-input-placeholder {
-    color: #ffffff;
-}
-
-.location .location-form .btn.btn-custom {
-    width: 100%;
-    color: #E81C2E;
-    background: #ffffff;
-    box-shadow: inset 0 0 0 0 #202C45;
-}
-
-.location .location-form .btn.btn-custom:hover {
-    color: #ffffff;
-    background: #E81C2E;
-    box-shadow: inset 400px 0 0 0 #202C45;
-}
-
-@media(min-width: 576px) and (max-width: 991.89px) {
-    .location .location-form .btn.btn-custom:hover {
-        box-shadow: inset 650px 0 0 0 #202C45;
-    }
-}
-
-
-/*******************************/
-/*********** Team CSS **********/
-/*******************************/
-.team {
-    position: relative;
-    width: 100%;
-    padding: 45px 0 15px 0;
-}
-
-.team .team-item {
-    position: relative;
-    margin-bottom: 30px;
-}
-
-.team .team-img {
-    position: relative;
-    border-radius: 5px 5px 0 0;
-    overflow: hidden;
-}
-
-.team .team-img img {
-    width: 100%;
-    transition: .3s;
-}
-
-.team .team-item:hover img {
-    transform: scale(1.1);
-}
-
-.team .team-text {
-    position: relative;
-    width: 100%;
-    padding: 35px 30px 30px 30px;
-    text-align: center;
-    background: #202C45;
-    border-radius: 0 0 5px 5px;
-    transition: .5s;
-}
-
-.team .team-item:hover .team-text {
-    background: #E81C2E;
-}
-
-.team .team-text h2 {
-    color: #ffffff;
-    font-size: 20px;
-    font-weight: 600;
-    letter-spacing: 1px;
-    margin-bottom: 10px;
-}
-
-.team .team-text p {
-    margin: 0;
-    color: #ffffff;
-}
-
-.team .team-social {
-    position: absolute;
-    width: 100%;
-    height: 40px;
-    top: -20px;
-    left: 0;
-    text-align: center;
-    font-size: 0;
-}
-
-.team .team-social a {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    margin: 0 3px;
-    padding: 7px 0;
-    text-align: center;
-    font-size: 16px;
-    color: #ffffff;
-    background: #202C45;
-    border-radius: 40px;
-    transition: .5s;
-}
-
-.team .team-item:hover .team-social a {
-    background: #E81C2E;
-}
-
-.team .team-social a:hover {
-    color: #202C45;
-}
-
-
-/*******************************/
-/******* Testimonial CSS *******/
-/*******************************/
-.testimonial {
-    position: relative;
-    width: 100%;
-    padding: 45px 0;
-}
-
-.testimonial .testimonials-carousel {
-    position: relative;
-    width: calc(100% + 30px);
-    margin: 0 -15px;
-}
-
-.testimonial .testimonial-item {
-    position: relative;
-    width: 100%;
-    padding: 0 15px;
-    display: flex;
-}
-
-.testimonial .testimonial-item img {
-    width: 80px;
-    height: 80px;
-    border-radius: 80px;
-    transform: scale(.8);
-    transition: 2s;
-}
-
-.testimonial .owl-item.center .testimonial-item img {
-    transform: scale(1);
-}
-
-.testimonial .testimonial-text {
-    width: calc(100% - 100px);
-    padding-left: 20px;
-}
-
-.testimonial .testimonial-text h3 {
-    font-size: 18px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    margin-bottom: 5px;
-}
-
-.testimonial .testimonial-text h4 {
-    color: #777777;
-    font-size: 15px;
-    font-weight: 400;
-    font-style: italic;
-    margin-bottom: 10px;
-}
-
-.testimonial .testimonial-text p {
-    margin: 0;
-}
-
-.testimonial .testimonial-text p::before {
-    content: "\f10d";
-    font-size: 25px;
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    color: #E81C2E;
-    margin-right: 10px;
-}
-
-.testimonial .owl-dots {
-    margin-top: 15px;
-    text-align: center;
-}
-
-.testimonial .owl-dot {
-    display: inline-block;
-    margin: 0 5px;
-    width: 12px;
-    height: 12px;
-    border-radius: 10px;
-    background: #dddddd;
-}
-
-.testimonial .owl-dot.active {
-    background: #E81C2E;
-}
-
-
-
-
 
 
 /*******************************/
@@ -1339,7 +1005,7 @@ margin-top: 5%;
     position: relative;
     margin-top: 45px;
     padding-top: 90px;
-    background: #202C45;
+    background: #3071E7;
 }
 
 .footer .footer-contact,
@@ -1357,7 +1023,7 @@ margin-top: 5%;
     font-size: 20px;
     font-weight: bolder;
     letter-spacing: 2px;
-    color:  #3071E7;
+    color:  #3D0000;
 }
 
 .footer .footer-link a {
@@ -1425,6 +1091,11 @@ margin-top: 5%;
     background: transparent;
     border: 1px solid #ffffff;
     border-radius: 5px;
+    color: #ffffff;
+}
+
+.footer .footer-newsletter ::placeholder {
+    color: #FFFFFF;
 }
 
 .footer .footer-newsletter label {
@@ -1443,8 +1114,8 @@ margin-top: 5%;
 
 .footer .footer-newsletter .btn:hover {
     color: #ffffff;
-    background: #3071E7;
-    box-shadow: inset 200px 0 0 0 #3071E7;
+    background: #E81C2E;
+    box-shadow: inset 200px 0 0 0 #E81C2E;
 }
 
 .footer .copyright {
@@ -1459,11 +1130,11 @@ margin-top: 5%;
 }
 
 .footer .copyright p a {
-    color: #3071E7;
+    color: #3D0000;
     font-weight: 700;
     letter-spacing: 1px;
 }
 
 .footer .copyright p a:hover {
-    color: #ffffff;
+    color: #E81C2E;
 }
