--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,6 @@ a:focus {
 .carousel .carousel-item {
     position: relative;
     width: 100%;
-    min-height: 400px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -337,7 +336,7 @@ a:focus {
 .carousel .carousel-img {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 70vh !important;
     min-height: 400px;
     text-align: right;
     overflow: hidden;
@@ -659,6 +658,21 @@ a:focus {
 @media (max-width: 575.98px) {
     .section-header h2 {
         font-size: 35px;
+    }
+    .whydivs {
+        flex-direction: column;
+    }
+    
+    .whydiv-1 ,.whydiv-2,.whydiv-3,.whydiv-4{
+        display: flex;
+    }
+    .bookform {
+        width: 100% !important;
+        margin: 0%;
+    }
+    .footer-newsletter form  {
+        width: 80% !important;
+        
     }
 }
 
@@ -1042,7 +1056,7 @@ margin-top: 5%;
 }
 
 .footer .footer-link a:hover {
-    color:  #3071E7;
+    color:  #E81C2E;
     letter-spacing: 1px;
 }
 
