--- a/css/style.css
+++ b/css/style.css
@@ -699,6 +699,7 @@ a:focus {
 
 .about .about-content {
     margin-bottom: 30px;
+    text-align: justify;
 }
 
 .about .about-content ul {
@@ -733,6 +734,11 @@ a:focus {
     display: flex;
     flex-direction: column;
     margin-bottom: 45px;
+}
+
+.service .service-item {
+    text-align: center;
+    align-items: center;
 }
 
 .service .service-item i {
